[gd_scene load_steps=21 format=3 uid="uid://blvu525vg5w5r"]

[ext_resource type="Script" path="res://Script/AngerShadowArcade.gd" id="1_fvo5a"]
[ext_resource type="Texture2D" uid="uid://21fqntieakfm" path="res://Assets/anger/rage_frame_1.png" id="2_ubtvm"]
[ext_resource type="Texture2D" uid="uid://bf6bybh7n5ajh" path="res://Assets/anger/rage4.png" id="3_l5ln8"]
[ext_resource type="Texture2D" uid="uid://c4w1h42hx583m" path="res://Assets/anger/rage6.png" id="4_bnn0i"]
[ext_resource type="Texture2D" uid="uid://bu264jm23gu71" path="res://Assets/anger/rage8.png" id="5_0k43l"]
[ext_resource type="Texture2D" uid="uid://cfqh7eajc2kjm" path="res://Assets/anger/rage10.png" id="6_75gwu"]
[ext_resource type="Texture2D" uid="uid://6ixr5vf5l6tp" path="res://Assets/anger/rage12.png" id="7_atmjb"]
[ext_resource type="Texture2D" uid="uid://cwln4fh2mxi45" path="res://Assets/anger/rage14.png" id="8_514c7"]
[ext_resource type="Texture2D" uid="uid://clg2k36mp1h7r" path="res://Assets/anger/rage16.png" id="9_woyku"]
[ext_resource type="Texture2D" uid="uid://cojbf0prtckpi" path="res://Assets/anger/rage18.png" id="10_qgq56"]
[ext_resource type="Texture2D" uid="uid://cmuy6hjvn7avp" path="res://Assets/anger/rage20.png" id="11_yqdwt"]
[ext_resource type="Texture2D" uid="uid://bych253eqnovn" path="res://Assets/anger/rage22.png" id="12_vu658"]
[ext_resource type="PackedScene" uid="uid://dtmnqp3oqf2ce" path="res://Szene/firetrail.tscn" id="13_acq3c"]
[ext_resource type="AudioStream" uid="uid://dyanyacdbbsf5" path="res://Assets/Musik/Sounds/player_2_jump.ogg" id="14_2oou7"]
[ext_resource type="AudioStream" uid="uid://64dq4b4ewe4" path="res://Assets/Musik/Sounds/fire_ability.wav" id="15_mdhg2"]
[ext_resource type="AudioStream" uid="uid://bbpbgxsu05xxg" path="res://Assets/Musik/Sounds/slide.wav" id="16_gccb7"]
[ext_resource type="Texture2D" uid="uid://c0jnktmmfroae" path="res://Assets/stun_stars.png" id="17_wx4wt"]

[sub_resource type="SpriteFrames" id="SpriteFrames_x4uv4"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_ubtvm")
}, {
"duration": 1.0,
"texture": ExtResource("3_l5ln8")
}, {
"duration": 1.0,
"texture": ExtResource("4_bnn0i")
}, {
"duration": 1.0,
"texture": ExtResource("5_0k43l")
}, {
"duration": 1.0,
"texture": ExtResource("6_75gwu")
}, {
"duration": 1.0,
"texture": ExtResource("7_atmjb")
}, {
"duration": 1.0,
"texture": ExtResource("8_514c7")
}, {
"duration": 1.0,
"texture": ExtResource("9_woyku")
}, {
"duration": 1.0,
"texture": ExtResource("10_qgq56")
}, {
"duration": 1.0,
"texture": ExtResource("11_yqdwt")
}, {
"duration": 1.0,
"texture": ExtResource("12_vu658")
}],
"loop": true,
"name": &"default",
"speed": 8.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_im4uc"]
radius = 199.003

[sub_resource type="CircleShape2D" id="CircleShape2D_igvfn"]
radius = 223.517

[node name="CharacterBody2D" type="CharacterBody2D" groups=["shadow"]]
scale = Vector2(0.25, 0.25)
script = ExtResource("1_fvo5a")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_x4uv4")
autoplay = "default"
frame_progress = 0.559026

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(19, 1)
shape = SubResource("CircleShape2D_im4uc")

[node name="Hurtbox" type="Area2D" parent="."]
collision_layer = 3
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2(19, 0)
shape = SubResource("CircleShape2D_igvfn")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]

[node name="DashTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="JumpHeightTimer" type="Timer" parent="."]
wait_time = 0.07

[node name="BufferingTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="Line2D" parent="." instance=ExtResource("13_acq3c")]

[node name="Jump" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("14_2oou7")
volume_db = 5.115

[node name="Ability" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("15_mdhg2")

[node name="Dash" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("16_gccb7")

[node name="Stun" type="Node2D" parent="."]
visible = false
scale = Vector2(2.36581, 1.88742)

[node name="StunStars" type="Sprite2D" parent="Stun"]
position = Vector2(-5.66071, -78.1607)
scale = Vector2(1.16987, 0.42908)
texture = ExtResource("17_wx4wt")

[node name="StunStars2" type="Sprite2D" parent="Stun"]
position = Vector2(-7.14286, -57.1429)
rotation = -3.12715
scale = Vector2(1.16987, 0.42908)
texture = ExtResource("17_wx4wt")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]

[node name="RayCast2D" type="RayCast2D" parent="."]
position = Vector2(20, 64)
target_position = Vector2(-216, 0)

[connection signal="body_entered" from="Hurtbox" to="." method="_on_hurtbox_body_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
[connection signal="timeout" from="DashTimer" to="." method="_on_dash_timer_timeout"]
[connection signal="timeout" from="JumpHeightTimer" to="." method="_on_jump_height_timer_timeout"]
[connection signal="timeout" from="BufferingTimer" to="." method="_on_buffering_timer_timeout"]
[connection signal="body_entered" from="Line2D" to="." method="_on_line_2d_body_entered"]
